<resources>
    <string name="app_name">IMS</string>
    <string name="title_activity_login">Sign in</string>
    <string name="facebook_app_id">514746655394268</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="logo">Logo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="facebookLogin">Login with facebook</string>
    <string name="register">Register</string>

    <!--Used in Setting fragment-->
    <string name="fa_info">&#xf05a;</string>
    <string name="fa_lock">&#xf023;</string>
    <string name="fa_envelope">&#xf0e0;</string>
    <string name="fa_bell">&#xf0f3;</string>

    <!--Used for tab in main activity-->
    <string name="fa_dashboard">&#xf080;</string>
    <string name="fa_clock">&#xf017;</string>
    <string name="fa_setting">&#xf013;</string>
    <string name="fa_feed">&#xf09e;</string>
    <string name="fa_edit">&#xf044;</string>
    <string name="fa_close">&#xf00d;</string>

    <string name="edit_profile">&#xf044; Edit Profile</string>
    <string name="logout">&#xf08b;</string>

    <string name="loren">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna dui, tempus id pharetra eu, tristique eu libero. Sed tincidunt, purus non tempor vehicula, nunc tortor mattis nunc, efficitur fermentum lectus neque scelerisque dolor.</string>
    <string name="close">Close</string>
    <string name="action_settings">Settings</string>
    <string name="action_notifications">Notifications</string>
    <string name="fa_angle_right"></string>
    <string name="view_all">View all</string>
    <string name="register_term_and_conditions"><![CDATA[I accept terms & conditions of IMS.]]></string>
    <string name="prompt_item_name">Item name</string>
    <string name="prompt_item_quantity">Quantity</string>
    <string name="prompt_item_price">Rate</string>
    <string name="prompt_item_description">Description</string>
    <string name="add">Add</string>


    <!--Validation Messages-->
    <string name="null_username">Please enter username</string>
    <string name="null_email">Please enter email</string>
    <string name="invalid_email">Please enter valid email</string>
    <string name="null_pass">Please enter password</string>
    <string name="null_confirm_pass">Please confirm password</string>
    <string name="prompt_firstName">First Name</string>
    <string name="prompt_lastName">Last Name</string>
    <string name="prompt_address">Address</string>
    <string name="done">Done</string>
    <string name="profile_updated_successful">Profile updated successfully.</string>
    <string name="item_name_null">Item name cannot be empty</string>


    <!--custom typeface-->
    <string name="icon_expand_down">&#xf107;</string>
    <string name="select_category">Select Category</string>
    <string name="category">Category</string>
    <string name="confirm">Confirm</string>
    <string name="clear">Clear</string>
    <string name="select_number_of_items">Select number of Items</string>
    <string name="select_inventory_item">Select Inventory Item</string>
    <string name="select_inventory_category">Select Inventory Category</string>
    <string name="download">Get PDF</string>
    <string name="transaction_report">Transaction Report</string>
    <string name="admin_id">UmpfR7ytwK</string>
    <string name="account_info">Account Info</string>

    <!--Password reset-->
    <string name="prompt_old_pass">Enter Current Password</string>
    <string name="prompt_new_pass">Enter New Password</string>
    <string name="prompt_new_pass_Confirm">Confirm New Password</string>
    <string name="master_card"> Master Card</string>
    <string name="pay_pal"> Pay Pal</string>
</resources>
